--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 image: Visual Studio 2017
 
+build:
+ - debug
+ - release
+
 install:
 - ps: (new-object Net.WebClient).DownloadString("https://raw.github.com/madskristensen/ExtensionScripts/master/AppVeyor/vsix.ps1") | iex
 
