--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 image: Visual Studio 2017
 
-build:
- - debug
- - release
+configuration:
+- Debug
+- Release
 
 install:
 - ps: (new-object Net.WebClient).DownloadString("https://raw.github.com/madskristensen/ExtensionScripts/master/AppVeyor/vsix.ps1") | iex
