--- a/src/packages.config
+++ b/src/packages.config
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="15.0.26606" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.0.26606" targetFramework="net46" />
-  <package id="OpenTK" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.4.27004" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="15.4.27004" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="15.4.27004" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="15.4.27004" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.4.27004" targetFramework="net46" />
+  <package id="OpenTK" version="3.0.0-pre" targetFramework="net46" />
 </packages>
