--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,18 @@ before_build:
 - nuget restore -Verbosity quiet
   #- ps: Vsix-TokenReplacement src\source.extension.cs 'Version = "([0-9\\.]+)"' 'Version = "{version}"'
 
-
 build:
   verbosity: minimal              # MSBuild verbosity level
 
-
 after_test:
 - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+
+deploy:
+  release: GLSL.v$(appveyor_build_version)
+  description: 'Release auto generated from AppVeyor'
+  provider: GitHub
+  auth_token:
+    secure: IGRhoLQi/yyC2ej7s79ZRU3PL3NScj4Kxh1Lyydg/CEvD/PbRwIilxmBziEHfwjJ
+  artifact: Latest build
+  draft: false
+  prerelease: false
