installation error removed: licence file must be a local uri and not an http link

--- a/src/GLSL.csproj
+++ b/src/GLSL.csproj
@@ -141,6 +141,10 @@
     <Resource Include="Resources\Add.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\ShaderPreview.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
