--- a/src/packages.config
+++ b/src/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.5.27130" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.5.27130" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="15.5.27130" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="15.5.27130" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.5.27130" targetFramework="net46" />
-  <package id="OpenTK" version="3.0.0-pre" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.7" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.17" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.7.18" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.53" targetFramework="net46" />
+  <package id="OpenTK" version="3.0.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
 </packages>
