--- a/ContextGL/ContextGL.csproj
+++ b/ContextGL/ContextGL.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="OpenTK">
-      <Version>3.0.0-pre</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
