--- a/src/packages.config
+++ b/src/packages.config
@@ -32,5 +32,9 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="OpenTK" version="3.0.0" targetFramework="net46" />
   <package id="StreamJsonRpc" version="1.3.23" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" />
+  <package id="Zenseless.Geometry" version="0.5.74" targetFramework="net46" />
+  <package id="Zenseless.HLGL" version="0.5.74" targetFramework="net46" />
+  <package id="Zenseless.OpenGL" version="0.5.74" targetFramework="net46" />
+  <package id="Zenseless.Patterns" version="0.5.74" targetFramework="net46" />
 </packages>
