--- a/src/packages.config
+++ b/src/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.8.525" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.7.27703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.7.27703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.11" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.17" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.33" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.21" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.15.0" version="15.7.27703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Framework" version="15.7.27703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net46" />
@@ -18,21 +18,28 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.15.6.DesignTime" version="15.6.27413" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30730" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="15.6.27740" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.Logic" version="15.6.27740" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI" version="15.6.27740" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.6.27740" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="15.8.525" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="15.8.525" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="15.8.525" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="15.8.525" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.7.21" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.21" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.8.145" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.145" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.7.27703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.58" targetFramework="net46" />
-  <package id="Microsoft.VSSDK.BuildTools" version="15.7.109" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.8.3247" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="OpenTK" version="3.0.0" targetFramework="net46" />
-  <package id="StreamJsonRpc" version="1.3.23" targetFramework="net46" />
+  <package id="StreamJsonRpc" version="1.4.121" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
   <package id="Zenseless.Geometry" version="0.5.87" targetFramework="net46" />
   <package id="Zenseless.HLGL" version="0.5.87" targetFramework="net46" />
   <package id="Zenseless.OpenGL" version="0.5.87" targetFramework="net46" />
