--- a/src/packages.config
+++ b/src/packages.config
@@ -32,16 +32,16 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="OpenTK" version="3.0.1" targetFramework="net46" />
   <package id="StreamJsonRpc" version="1.4.128" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
-  <package id="Zenseless.Geometry" version="0.5.91" targetFramework="net46" />
-  <package id="Zenseless.HLGL" version="0.5.91" targetFramework="net46" />
-  <package id="Zenseless.OpenGL" version="0.5.91" targetFramework="net46" />
-  <package id="Zenseless.Patterns" version="0.5.91" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="Zenseless.Geometry" version="0.5.101" targetFramework="net461" />
+  <package id="Zenseless.HLGL" version="0.5.101" targetFramework="net461" />
+  <package id="Zenseless.OpenGL" version="0.5.101" targetFramework="net461" />
+  <package id="Zenseless.Patterns" version="0.5.101" targetFramework="net461" />
 </packages>
