--- a/src/packages.config
+++ b/src/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GLSLhelper" version="0.1.5" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.8.525" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.9.28307" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.9.28307" targetFramework="net461" />
