--- a/src/packages.config
+++ b/src/packages.config
@@ -32,6 +32,7 @@
   <package id="Microsoft.VSSDK.BuildTools" version="15.9.3032" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
+  <package id="Sprache" version="2.2.0" targetFramework="net461" />
   <package id="StreamJsonRpc" version="1.4.134" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
